adding new datasets

--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -68,7 +68,11 @@ data:
         },
         {
           "type": "hdt",
-          "value": "/data/deploy/neighborhood-information-kg.hdt"
+          "value": "/data/deploy/hydrology-kg.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/spatialkg.hdt"
         }
       ]
     }
