--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -141,12 +141,20 @@ data:
           "hdtFile": "/data/deploy/wildlifekg.hdt"
         },
         {
-          "@id": "urn:ldf-server:wildlifeDatasource",
+          "@id": "urn:ldf-server:hydrologykgDatasource",
           "@type": "HdtDatasource",
-          "datasourceTitle": "Neighborhood Information KG",
-          "description": "Neighborhood Information KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "neighborhood-information-kg",
-          "hdtFile": "/data/deploy/neighborhood-information-kg.hdt"
+          "datasourceTitle": "hydrology-kg",
+          "description": "Hydrology KG Triple Pattern Fragments endpoint",
+          "datasourcePath": "hydrology-kg",
+          "hdtFile": "/data/deploy/hydrology-kg.hdt"
         },
+        {
+          "@id": "urn:ldf-server:spatialkgDatasource",
+          "@type": "HdtDatasource",
+          "datasourceTitle": "spatialkg",
+          "description": "Spatial KG Triple Pattern Fragments endpoint",
+          "datasourcePath": "spatialkg",
+          "hdtFile": "/data/deploy/spatialkg.hdt"
+        }
       ]
     }
