--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -68,11 +68,15 @@ data:
         },
         {
           "type": "hdt",
-          "value": "/data/deploy/hydrology-kg.hdt"
+          "value": "/data/deploy/hydrologykg.hdt"
         },
         {
           "type": "hdt",
           "value": "/data/deploy/spatialkg.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/fiokg.hdt"
         }
       ]
     }
