--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -143,10 +143,10 @@ data:
         {
           "@id": "urn:ldf-server:hydrologykgDatasource",
           "@type": "HdtDatasource",
-          "datasourceTitle": "hydrology-kg",
+          "datasourceTitle": "hydrologykg",
           "description": "Hydrology KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "hydrology-kg",
-          "hdtFile": "/data/deploy/hydrology-kg.hdt"
+          "datasourcePath": "hydrologykg",
+          "hdtFile": "/data/deploy/hydrologykg.hdt"
         },
         {
           "@id": "urn:ldf-server:spatialkgDatasource",
@@ -155,6 +155,14 @@ data:
           "description": "Spatial KG Triple Pattern Fragments endpoint",
           "datasourcePath": "spatialkg",
           "hdtFile": "/data/deploy/spatialkg.hdt"
+        },
+        {
+          "@id": "urn:ldf-server:fiokgDatasource",
+          "@type": "HdtDatasource",
+          "datasourceTitle": "fiokg",
+          "description": "FIO KG Triple Pattern Fragments endpoint",
+          "datasourcePath": "fiokg",
+          "hdtFile": "/data/deploy/fiokg.hdt"
         }
       ]
     }
