new data set geodesc and bug fixes

--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -163,6 +163,15 @@ data:
           "description": "FIO KG Triple Pattern Fragments endpoint",
           "datasourcePath": "fiokg",
           "hdtFile": "/data/deploy/fiokg.hdt"
-        }
+        },
+        {
+          "@id": "urn:ldf-server:geoconnexDatasource",
+          "@type": "HdtDatasource",
+          "datasourceTitle": "geoconnex",
+          "description": "Geoconnex Triple Pattern Fragments endpoint",
+          "datasourcePath": "geoconnex",
+          "hdtFile": "/data/deploy/geoconnex.hdt"
+        },
+
       ]
     }
