--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -77,6 +77,10 @@ data:
         {
           "type": "hdt",
           "value": "/data/deploy/fiokg.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/geoconnex.hdt"
         }
       ]
     }
