--- a/src/k8s/templates/federation/ingress.j2
+++ b/src/k8s/templates/federation/ingress.j2
@@ -5,7 +5,7 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-{#    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0,::/0"#}
+    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0,::/0"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
   name: frink-union-comunica-ingress
