pushing compression and ingress changes

--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -81,6 +81,10 @@ data:
         {
           "type": "hdt",
           "value": "/data/deploy/geoconnex.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/biohealth.hdt"
         }
       ]
     }
