--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -172,6 +172,14 @@ data:
           "datasourcePath": "geoconnex",
           "hdtFile": "/data/deploy/geoconnex.hdt"
         },
+        {
+          "@id": "urn:ldf-server:biohealthDatasource",
+          "@type": "HdtDatasource",
+          "datasourceTitle": "geoconnex",
+          "description": "Biohealth Triple Pattern Fragments endpoint",
+          "datasourcePath": "biohealth",
+          "hdtFile": "/data/deploy/biohealth.hdt"
+        },
 
       ]
     }
