--- a/src/k8s/templates/ldf/ingress.j2
+++ b/src/k8s/templates/ldf/ingress.j2
@@ -16,7 +16,7 @@ spec:
   - host: {{ host_name }}
     http:
       paths:
-      - pathType: Prefix
+      - pathType: ImplementationSpecific
         path: "/ldf/(.*)"
         backend:
           service:
