--- a/src/k8s/templates/fuseki/ingress.j2
+++ b/src/k8s/templates/fuseki/ingress.j2
@@ -18,7 +18,7 @@ spec:
   - host: {{ host_name }}
     http:
       paths:
-      - pathType: Prefix
+      - pathType: ImplementationSpecific
         path: "/{{ kg_name }}/(.*)"
         backend:
           service:
