pushing last changes nasa dep

--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -85,6 +85,10 @@ data:
         {
           "type": "hdt",
           "value": "/data/deploy/biohealth.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/nasa-gesdisc-kg.hdt"
         }
       ]
     }
