--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -180,6 +180,14 @@ data:
           "datasourcePath": "biohealth",
           "hdtFile": "/data/deploy/biohealth.hdt"
         },
+        {
+          "@id": "urn:ldf-server:nasagesdesckgDatasource",
+          "@type": "HdtDatasource",
+          "datasourceTitle": "nasagesdesckg",
+          "description": "NASA Gesdesc Triple Pattern Fragments endpoint",
+          "datasourcePath": "nasa-gesdesc-kg",
+          "hdtFile": "/data/deploy/nasa-gesdesc-kg.hdt"
+        },
 
       ]
     }
