--- a/src/k8s/templates/federation/config-map.j2
+++ b/src/k8s/templates/federation/config-map.j2
@@ -89,6 +89,10 @@ data:
         {
           "type": "hdt",
           "value": "/data/deploy/nasa-gesdisc-kg.hdt"
+        },
+        {
+          "type": "hdt",
+          "value": "/data/deploy/identifier-mappings.hdt"
         }
       ]
     }
