--- a/src/k8s/templates/ldf/config-map.j2
+++ b/src/k8s/templates/ldf/config-map.j2
@@ -17,184 +17,6 @@ data:
             "pageSize": 100
           }
         ],
-      "datasources": [
-        {
-              "@id": "urn:ldf-server:wikidataDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "Wikidata",
-              "description": "Wikidata Triple Pattern Fragments endpoint",
-              "datasourcePath": "wikidata",
-              "hdtFile": "/data/deploy/wikidata-all.hdt"
+      "datasources": {{ datasources | tojson(indent=2) | indent(6) }}
 
-        },
-        {
-              "@id": "urn:ldf-server:ubergraphDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "Ubergraph",
-              "description": "Ubergraph Triple Pattern Fragments endpoint",
-              "datasourcePath": "ubergraph",
-              "hdtFile": "/data/deploy/ubergraph.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:dreamkgDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "DREAM-KG",
-              "description": "DREAM-KG Triple Pattern Fragments endpoint",
-              "datasourcePath": "dreamkg",
-              "hdtFile": "/data/deploy/dreamkg.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:ufoknDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "UFOKN",
-              "description": "Urban Flooding Open Knowledge Network (UF-OKN) Triple Pattern Fragments endpoint",
-              "datasourcePath": "ufokn",
-              "hdtFile": "/data/deploy/ufokn.hdt"
-
-        },
-        {
-              "@id": "urn:ldf-server:semopenalexDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SemOpenAlex",
-              "description": "SemOpenAlex Triple Pattern Fragments endpoint",
-              "datasourcePath": "semopenalex",
-              "hdtFile": "/data/deploy/semopenalex.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:scalesDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SCALES",
-              "description": "SCALES Triple Pattern Fragments endpoint",
-              "datasourcePath": "scales",
-              "hdtFile": "/data/deploy/scales.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:sockgDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SOCKG",
-              "description": "Soil Organic Carbon Knowledge Graph (SOCKG) Triple Pattern Fragments endpoint",
-              "datasourcePath": "sockg",
-              "hdtFile": "/data/deploy/sockg.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:sudoknDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SUDOKN",
-              "description": "Supply and Demand Open Knowledge Network (SUDOKN) Triple Pattern Fragments endpoint",
-              "datasourcePath": "sudokn",
-              "hdtFile": "/data/deploy/sudokn.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:climatepub4kgDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "climatepub4-kg",
-              "description": "climatepub4-kg Triple Pattern Fragments endpoint",
-              "datasourcePath": "climatepub4kg",
-              "hdtFile": "/data/deploy/climatepub4kg.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:securechainkgDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "Secure Chain KG",
-              "description": "Secure Chain KG Triple Pattern Fragments endpoint",
-              "datasourcePath": "securechainkg",
-              "hdtFile": "/data/deploy/securechainkg.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:biobricksiceDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "BioBricks ICE KG",
-              "description": "BioBricks ICE KG Triple Pattern Fragments endpoint",
-              "datasourcePath": "biobricks-ice",
-              "hdtFile": "/data/deploy/biobricks-ice.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:ruralkgDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "RURAL-KG",
-              "description": "RURAL-KG Triple Pattern Fragments endpoint",
-              "datasourcePath": "ruralkg",
-              "hdtFile": "/data/deploy/ruralkg.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:sawgraphDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SAWGraph",
-              "description": "SAWGraph Triple Pattern Fragments endpoint",
-              "datasourcePath": "sawgraph",
-              "hdtFile": "/data/deploy/sawgraph.hdt"
-        },
-        {
-              "@id": "urn:ldf-server:spokeDatasource",
-              "@type": "HdtDatasource",
-              "datasourceTitle": "SPOKE",
-              "description": "SPOKE Triple Pattern Fragments endpoint",
-              "datasourcePath": "spoke",
-              "hdtFile": "/data/deploy/spoke.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:wildlifeDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "Wildlife KG",
-          "description": "Wildlife KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "wildlifekg",
-          "hdtFile": "/data/deploy/wildlifekg.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:hydrologykgDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "hydrologykg",
-          "description": "Hydrology KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "hydrologykg",
-          "hdtFile": "/data/deploy/hydrologykg.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:spatialkgDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "spatialkg",
-          "description": "Spatial KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "spatialkg",
-          "hdtFile": "/data/deploy/spatialkg.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:fiokgDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "fiokg",
-          "description": "FIO KG Triple Pattern Fragments endpoint",
-          "datasourcePath": "fiokg",
-          "hdtFile": "/data/deploy/fiokg.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:geoconnexDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "geoconnex",
-          "description": "Geoconnex Triple Pattern Fragments endpoint",
-          "datasourcePath": "geoconnex",
-          "hdtFile": "/data/deploy/geoconnex.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:biohealthDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "biohealth",
-          "description": "Biohealth Triple Pattern Fragments endpoint",
-          "datasourcePath": "biohealth",
-          "hdtFile": "/data/deploy/biohealth.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:nasagesdesckgDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "NASA-GESDISC-KG",
-          "description": "NASA Gesdesc Triple Pattern Fragments endpoint",
-          "datasourcePath": "nasa-gesdisc-kg",
-          "hdtFile": "/data/deploy/nasa-gesdisc-kg.hdt"
-        },
-        {
-          "@id": "urn:ldf-server:identifiermappingsDatasource",
-          "@type": "HdtDatasource",
-          "datasourceTitle": "identifiermappings",
-          "description": "Mappings using standard RDF predicates between Wikidata entities and external identifiers represented as RDF IRIs",
-          "datasourcePath": "identifier-mappings",
-          "hdtFile": "/data/deploy/identifier-mappings.hdt"
-        }
-      ]
     }
